Changes Title to CSRF

--- a/examples/angular/templates/index.html
+++ b/examples/angular/templates/index.html
@@ -1,6 +1,6 @@
 <html ng-app="app">
     <head>
-        <title>Martini Csrf</title>
+        <title>Martini CSRF</title>
         <script src="//code.angularjs.org/1.2.9/angular.js"></script>
         <script src="//code.angularjs.org/1.2.9/angular-cookies.js"></script>
         <script src="/main.js"></script>
