--- a/examples/angular/templates/login.tmpl
+++ b/examples/angular/templates/login.tmpl
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Martini Csrf</title>
+        <title>Martini CSRF</title>
     </head>
     <body>
        <p>This form simulates a login and generates a new session id. You can put whatever you want in these inputs,
