--- a/examples/server_rendered/templates/custom_error.tmpl
+++ b/examples/server_rendered/templates/custom_error.tmpl
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Martini Csrf</title>
+        <title>Martini CSRF</title>
     </head>
     <body>
        <p>This form simulates a custom error response. It doesn't matter what you enter in these inputs. It will always return an error.</p>
