--- a/examples/server_rendered/templates/index.tmpl
+++ b/examples/server_rendered/templates/index.tmpl
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Martini Csrf</title>
+        <title>Martini CSRF</title>
     </head>
     <body>
         <p>The form contains a hidden _csrf form value that will be submitted with this form.</p>
