--- a/examples/server_rendered/templates/result.tmpl
+++ b/examples/server_rendered/templates/result.tmpl
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Martini Csrf</title>
+        <title>Martini CSRF</title>
     </head>
     <body>
         <h3>{{.}}</h3>
